# ESP32-SD-Wifi-Wav-Player

./: CMakeLists.txt  README.md  partitions.csv  partitions_n16r8.csv  sdkconfig.defaults  sdkconfig.defaults.n16r8  sdkconfig.n16r8
build-n16r8/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build-n16r8/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build-n16r8/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-n16r8/esp-idf/: cmake_install.cmake
build-n16r8/gdbinit/: gdbinit  symbols
build-n16r8/log/: idf_py_stderr_output_13382  idf_py_stderr_output_14131  idf_py_stderr_output_25936  idf_py_stderr_output_27129  idf_py_stderr_output_29504  idf_py_stderr_output_33155  idf_py_stderr_output_97718  idf_py_stdout_output_12603  idf_py_stdout_output_13382  idf_py_stdout_output_14131  idf_py_stdout_output_23155  idf_py_stdout_output_25936  (+11 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_output.c  audio_output.h  audio_pcm.c  audio_pcm.h  audio_sdcard.c  audio_sdcard.h  audio_storage_stream.c  audio_storage_stream.h  audio_wav.c  audio_wav.h  loop_player.c  loop_player.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
(+152 files in other folders)
